Closed Bug 1602601 Opened 4 years ago Closed 4 years ago

Perma MinGW make[4]: *** [xul.dll] Error 1 | referenced by /builds/worker/workspace/build/src/accessible/windows/msaa/AccessibleWrap.cpp:1035

Categories

(Core :: Disability Access APIs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox-esr68 72+ fixed
firefox71 --- unaffected
firefox72 --- unaffected
firefox73 --- unaffected

People

(Reporter: intermittent-bug-filer, Assigned: RyanVM)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=280340670&repo=mozilla-esr68
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Os4EwVV-SMmHabO5cQ3s_Q/runs/0/artifacts/public/logs/live_backing.log


[task 2019-12-09T19:35:07.197Z] 19:35:07 INFO - rm -f xul.dll
[task 2019-12-09T19:35:07.197Z] 19:35:07 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/toolkit/library'
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/toolkit/library'
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - /builds/worker/workspace/build/src/clang/bin/x86_64-w64-mingw32-clang++ -mwindows -shared -Wl,--out-implib -Wl,libxul.a -Wl,-pdb,xul.pdb -o xul.dll @/builds/worker/workspace/build/src/obj-firefox/toolkit/library/xul_dll.list ./module.res -Wl,--dynamicbase -Wl,--icf=safe -Wl,-Xlink=-DELAYLOAD:comdlg32.dll -Wl,-Xlink=-DELAYLOAD:hid.dll -Wl,-Xlink=-DELAYLOAD:msimg32.dll -Wl,-Xlink=-DELAYLOAD:netapi32.dll -Wl,-Xlink=-DELAYLOAD:secur32.dll -Wl,-Xlink=-DELAYLOAD:urlmon.dll -Wl,-Xlink=-DELAYLOAD:wininet.dll -Wl,-Xlink=-DELAYLOAD:winspool.drv -Wl,-Xlink=-DELAYLOAD:oleacc.dll -Wl,-Xlink=-DELAYLOAD:api-ms-win-core-winrt-l1-1-0.dll -Wl,-Xlink=-DELAYLOAD:api-ms-win-core-winrt-string-l1-1-0.dll ../../security/nss/lib/crmf/crmf_crmf/libcrmf.a ../../js/src/build/libjs_static.a /builds/worker/workspace/build/src/obj-firefox/x86_64-pc-windows-gnu/release/gkrust.lib ../../mozglue/build/libmozglue.a ../../security/libnss3.a ../../config/external/lgpllibs/liblgpllibs.a -luuid -lusp10 -lgdi32 -lwinmm -lwsock32 -luserenv -lsecur32 -lshell32 -ldbghelp -lhid -lrpcrt4 -lurlmon -lavrt -lusp10 -lole32 -lmsimg32 -lwinmm -lntdll -lcredui -lmfuuid -lwmcodecdspuuid -lstrmiids -lcrypt32 -lversion -lwinspool -lcomdlg32 -limm32 -lnetapi32 -lshlwapi -lws2_32 -ldwmapi -liphlpapi -luxtheme -lsetupapi -lsecur32 -lsensorsapi -lportabledeviceguids -lwininet -lwbemuuid -lwintrust -lwtsapi32 -llocationapi -lsapi -ldxguid -ldhcpcsvc -loleacc -loleaut32 -ldelayimp
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - lld-link: error: undefined symbol: _ZN7mozilla4a11y19HyperTextAccessible11ReplaceTextERK12nsTSubstringIDsE
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - >>> referenced by /builds/worker/workspace/build/src/accessible/windows/msaa/AccessibleWrap.cpp:1035
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - >>> ../../accessible/windows/msaa/Unified_cpp_windows_msaa0.o:(_ZN7mozilla4a11y14AccessibleWrap12put_accValueE10tagVARIANTPw)
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - clang-8: error: linker command failed with exit code 1 (use -v to see invocation)
[task 2019-12-09T19:35:07.887Z] 19:35:07 INFO - /builds/worker/workspace/build/src/config/rules.mk:680: recipe for target 'xul.dll' failed
[task 2019-12-09T19:35:07.887Z] 19:35:07 ERROR - make[4]: *** [xul.dll] Error 1
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/toolkit/library'
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - /builds/worker/workspace/build/src/config/recurse.mk:74: recipe for target 'toolkit/library/target' failed
[task 2019-12-09T19:35:07.888Z] 19:35:07 ERROR - make[3]: *** [toolkit/library/target] Error 2
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - /builds/worker/workspace/build/src/config/recurse.mk:32: recipe for target 'compile' failed
[task 2019-12-09T19:35:07.888Z] 19:35:07 ERROR - make[2]: *** [compile] Error 2
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - /builds/worker/workspace/build/src/config/rules.mk:413: recipe for target 'default' failed
[task 2019-12-09T19:35:07.888Z] 19:35:07 ERROR - make[1]: *** [default] Error 2
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - client.mk:125: recipe for target 'build' failed
[task 2019-12-09T19:35:07.888Z] 19:35:07 INFO - make: *** [build] Error 2
[task 2019-12-09T19:35:07.923Z] 19:35:07 INFO - 1031 compiler warnings present.
[task 2019-12-09T19:35:08.004Z] 19:35:08 INFO - Notification center failed: Install notify-send (usually part of the libnotify package) to get a notification when the build finishes.
[task 2019-12-09T19:35:08.040Z] 19:35:08 ERROR - Return code: 2
[task 2019-12-09T19:35:08.041Z] 19:35:08 WARNING - setting return code to 2
[task 2019-12-09T19:35:08.041Z] 19:35:08 FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2019-12-09T19:35:08.041Z] 19:35:08 FATAL - Running post_fatal callback...
[task 2019-12-09T19:35:08.041Z] 19:35:08 FATAL - Exiting -1
[task 2019-12-09T19:35:08.041Z] 19:35:08 INFO - [mozharness: 2019-12-09 19:35:08.041124Z] Finished build step (failed)
[task 2019-12-09T19:35:08.041Z] 19:35:08 INFO - Running post-run listener: _parse_build_tests_ccov
[task 2019-12-09T19:35:08.041Z] 19:35:08 INFO - Running post-run listener: _shutdown_sccache
[task 2019-12-09T19:35:08.041Z] 19:35:08 INFO - Running command: ['/builds/worker/workspace/build/src/sccache2/sccache', '--stop-server'] in /builds/worker/workspace/build/src
[task 2019-12-09T19:35:08.041Z] 19:35:08 INFO - Copy/paste: /builds/worker/workspace/build/src/sccache2/sccache --stop-server
[task 2019-12-09T19:35:08.044Z] 19:35:08 INFO - Stopping sccache server...
[task 2019-12-09T19:35:08.044Z] 19:35:08 INFO - error: couldn't connect to server
[task 2019-12-09T19:35:08.044Z] 19:35:08 INFO - caused by: Connection refused (os error 111)
[task 2019-12-09T19:35:08.044Z] 19:35:08 ERROR - Return code: 2
[task 2019-12-09T19:35:08.044Z] 19:35:08 INFO - Running post-run listener: _summarize
[task 2019-12-09T19:35:08.044Z] 19:35:08 ERROR - # TBPL FAILURE #
[task 2019-12-09T19:35:08.044Z] 19:35:08 INFO - [mozharness: 2019-12-09 19:35:08.044325Z] FxDesktopBuild summary:
[task 2019-12-09T19:35:08.044Z] 19:35:08 ERROR - # TBPL FAILURE #
[taskcluster 2019-12-09 19:35:08.386Z] === Task Finished ===
[taskcluster 2019-12-09 19:35:08.764Z] Unsuccessful task run with exit code: 255 completed in 1764.038 seconds

This is somehow fallout from the uplift of bug 1221256 to ESR68, only affecting MinGW opt builds (debug are fine). At the suggestion of Tom, I ran a patch through Try removing the inline annotation from RemoveText in HyperTextAccessible-inl.h and that was green.
https://searchfox.org/mozilla-central/source/accessible/generic/HyperTextAccessible-inl.h#48

And of course, the same patch landed on mozilla-central without any issues at all.

I'm not sure what to make of this besides "MinGW weirdness". Maybe we can just land the inline removal to fix this? I'm not sure what the perf implications of doing that would be, though.

Has Regression Range: --- → yes
Keywords: regression

You could try adding:
#include "HyperTextAccessible-inl.h"
to accessible/windows/msaa/AccessibleWrap.cpp. That should fix it without impacting perf. That said, I'm really not a fan of these -inl.h files; with modern compilers, I feel like this is premature optimisation. Still, let's not boil the ocean here.

Assignee: nobody → ryanvm

Confirmed on Try that Jamie's suggestion works. Jamie, want to do the honors of giving it a rubberstamp? :)

Flags: needinfo?(jteh)
Flags: needinfo?(jteh)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: